# roy

./: CMakeLists.txt  README.md  conanfile.txt  plan.txt
data/: setup.json
header/: group_controller.hpp  leader_controller.hpp  led_controller.hpp
plans/: plan.plan  test.kml
src/: group_controller.cpp  leader_controller.cpp  leader_controller_node.cpp  led_controller.cpp  led_controller_node.cpp
src/Server/: client  client.cpp  server  server.cpp
src/group/: group_controller.cpp  group_controller_node.cpp
src/leader/: leader_controller.cpp  leader_controller_node.cpp
src/led/: led_controller.cpp  led_controller_node.cpp
